# rust-photo-lib

./: Cargo.toml  README.md  skills-lock.json
crates/photo-backend-ort/: Cargo.toml
crates/photo-backend-ort/src/: lib.rs
crates/photo-backend-tract/: Cargo.toml
crates/photo-backend-tract/src/: lib.rs
crates/photo-cli/: Cargo.toml
crates/photo-cli/examples/: basic_tone.rs  style_transfer.rs
crates/photo-cli/src/: main.rs
crates/photo-core/: Cargo.toml
crates/photo-core/src/: lib.rs
crates/photo-imageops/: Cargo.toml
crates/photo-imageops/src/: beauty.rs  lib.rs
crates/photo-models/: Cargo.toml
crates/photo-models/src/: face_beauty.rs  lib.rs  style_transfer.rs
crates/photo-onnx/: Cargo.toml
crates/photo-onnx/src/: lib.rs
