[workspace]
members = [
    "crates/photo-core",
    "crates/photo-imageops",
    "crates/photo-onnx",
    "crates/photo-backend-ort",
    "crates/photo-backend-tract",
    "crates/photo-models",
    "crates/photo-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GNU General Public License v3.0"
authors = ["shaoyuanyu", "nianzulin", "taiyujin"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
ndarray = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
